// the version of the language, use proto3 for contracts
syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "acs12.proto";

option csharp_namespace = "EcoEarn.Contracts.TestPointsContract";

service TestPointsContract {
  option (aelf.base) = "acs12.proto";
  option (aelf.csharp_state) = "EcoEarn.Contracts.TestPointsContract.TestPointsContractState";

  rpc Initialize(InitializeInput) returns (google.protobuf.Empty) {}
  rpc GetPoint(GetPointInput) returns (PointInfo){ option (aelf.is_view) = true; }
  rpc GetDappInformation(GetDappInformationInput) returns (GetDappInformationOutput) { option (aelf.is_view) = true; }
  rpc Join(JoinInput) returns (google.protobuf.Empty) {}
  rpc AcceptReferral(AcceptReferralInput) returns (google.protobuf.Empty) {}
  rpc BatchSettle(BatchSettleInput) returns (google.protobuf.Empty) {}
}

message InitializeInput {
  string points_name = 1;
}

message GetPointInput {
  aelf.Hash dapp_id = 1;
  string points_name = 2;
}

message PointInfo {
  string token_name = 1;
  int32 decimals = 2;
}

message GetDappInformationInput {
  aelf.Hash dapp_id = 1;
}

message GetDappInformationOutput {
  DappInfo dapp_info = 1;
}

message DappInfo {
  aelf.Address dapp_admin = 1;
  string official_domain = 2;
  PointsRuleList dapps_point_rules = 3;
  aelf.Address dapp_contract_address = 4;
}

message PointsRuleList {
  repeated PointsRule points_rules = 1;
}

message PointsRule {
  string action_name = 1;
  string point_name = 2;
  int64 user_points = 3;
  int64 kol_points_percent = 4;
  int64 inviter_points_percent = 5;
  bool enable_proportional_calculation = 6;
}

message JoinInput {
  aelf.Hash dapp_id = 1;
  string domain = 2;
  aelf.Address registrant = 3;
}

message AcceptReferralInput {
  aelf.Hash dapp_id = 1;
  aelf.Address referrer = 2;
  aelf.Address invitee = 3;
}

message BatchSettleInput {
  string action_name = 1;
  aelf.Hash dapp_id = 2;
  repeated UserPoints user_points_list = 3;
}

message UserPoints {
  aelf.Address user_address = 1;
  int64 user_points = 2;
  aelf.BigIntValue user_points_value = 3;
}